[project]
name = "code-analysis"
version = "0.1.2"
description = "Add your description here"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiohttp==3.11.14",
    "google-search-results>=2.4.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "pathspec>=1.0.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "structlog>=25.5.0",
    "tavily-python>=0.7.22",
]

[tool.security]
dependency-pinning = true
allow-external = ["127.0.0.1"]
deny-networks = ["*"]
